# personal_finance_sim

./: .gitignore  finance_sim_functions.xlsx
finance_sim/: .gitignore  README.md  pyproject.toml
finance_sim/src/finance_sim/core/: distributions.py  financial_item.py  loan.py  month.py  plans.py  scenario.py  types.py
finance_sim/src/finance_sim/engine/: calendar.py  series_builders.py  simulator.py
finance_sim/tests/: test_calendar.py  test_imports.py  test_series_builders.py  test_simulation_scenarios.py  test_simulator_loop.py
