[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-sim"
version = "0.1.0"
description = "Simulador financiero modular"
authors = [{ name = "Jason Courrau" }]
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]